# openman

./: .gitignore  .tauri-keys.pub  AGENT.md  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  test-server.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
.storybook/: main.ts  preview.tsx
docs/: e2e-test-expansion-plan.md  environment-creation-bug-fix.md  playwright-e2e-setup.md  release-process.md  sidebar-drag-drop-bug-fix.md
e2e/: app.spec.ts  collections.spec.ts  environments.spec.ts  history.spec.ts  import-export.spec.ts  logging.spec.ts  request-builder.spec.ts  settings.spec.ts  sidebar.spec.ts
e2e/fixtures/: tauri-mock.ts
plans/: openman-architecture.md
scripts/: release-check.cjs  release-prepare.cjs  version-bump.cjs  version-verify.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: http.rs  logging.rs  mod.rs  storage.rs
src-tauri/src/engines/: http_engine.rs  mod.rs
src-tauri/src/models/: collection.rs  environment.rs  mod.rs  request.rs  response.rs
src-tauri/src/storage/: collection.rs  environment.rs  logging.rs  mod.rs  workspace.rs
src-tauri/src/utils/: import_export.rs  mod.rs
(+68 files in other folders)
